Fixed hamburger menu on mobile

--- a/mediaStyles.css
+++ b/mediaStyles.css
@@ -13,10 +13,10 @@
   }
   
   @media screen and (max-width: 1200px) {
-    #desktop-nav {
+    #pc-nav {
       display: none;
     }
-    #hamburger-nav {
+    #menu-nav {
       display: flex;
     }
     #experience,
